# Visualization

./: .gitignore  CHANGELOG.md  H2O_H2O.py  LICENSE  MANIFEST.in  README.md  TESTING.md  UV_SETUP.md  acetylene.py  do_testow.py  ethylene.py  ethylene_twisted.py  example_pl.ipynb  example_pl.tex  f2py_gammcor.py  h2o_h20.py  pyproject.toml  pytest.ini  requirements-dev.txt  setup.cfg  setup.py  setup_environment.sh  show_water.py  test2.py  test2_other_old.py  test_3.py  test_Aga_orbitals.py  test_dispersion_index.py  test_hapek copy.py  test_hapek.py  test_modules.py
.github/workflows/: tests.yml
Examples/: H2O_H2O.out
Examples/C2H4_C2H4/: ethylene.out  ethylene_erpa.txt
Examples/benzcyclo/: benzcyclo.out  sapt.out
Examples/benzcyclo_excite/: benzcyclo.out  sapt.out
KowalskiVisualisation.egg-info/: PKG-INFO  SOURCES.txt
docs/: QA_TESTING_PLAN.md
tests/: DALTON.BAS  DALTON.CM  DALTON.MOL  DALTON.MOPUN  DALTON.ORB  DALTON.PROP  DALTON.STAT  GVB_AB_AB_restart_1.000.out  Kowalski_Geminale.py  SIRIUS.RST  __init__.py  conftest.py  geometry_test.py  local_test.py  molden.inp  wynik_gammcor_10.txt
tests/fixtures/: __init__.py
tests/integration/: test_dispersion_workflow.py
tests/unit/: test_basis_normalization.py  test_input_dalton.py  test_input_molpro.py  test_orbital_calculation.py  test_smoke.py
tests/validation/: __init__.py  test_ao_known_answer.py  test_orbital_properties.py
tests/visual/: __init__.py  test_water_visualization.py
visualisation/: DaltonPlt.py  geminal.py  geminal_generator.py  grid.py  inputs.py  orbital_generator.py  plot_kowalski.py  test_modules.py  visualisation.py  visualisation_data.py
visualization/: __init__.py  basis_normalization.py  constants.py  cube.py  dispersion_plot.py  geminals.py  grid.py  input_dalton.py  input_molpro.py  input_molpro_sapt.py  inputs.py  molecular_system.py  orbital_generator.py  orbitals.py  orbitals_gpu.py  pyproject.toml  requir  sapt_plot.py  setup.cfg  utils.py  visualisation.py  visualization.py  visualization_data.py
visualization/backends/: __init__.py  base.py  mayavi_backend.py  pyvista_backend.py
visualization/old/: geminal_generator_old.py  visualization_data.py
