[metadata]
name = visualization
version = 0.0.1
author = Piotr Kowalski
author_email = hemiku@gmail.com
description = General Visualization Tool for visualization molecules
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hemiku/Visualization/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True